[project]
name = "rlib-pixelrunner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dxcam>=0.0.5",
    "easyocr>=1.7.2",
    "nuitka>=2.7.13",
    "pywin32>=311",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
